<resources>
    <string name="app_name">致富小能手</string>

    <!-- Strings related to login -->
    <string name="prompt_user_name">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_inventory">盘点</string>
    <string name="title_activity_login">登录</string>
    <string name="tab_title_info">资产信息</string>
    <string name="tab_title_list">资产列表</string>
    <string name="title_activity_inventory_info">资产信息</string>
    <string name="title_activity_inventory_list">资产列表</string>
    <string name="title_activity_inventory_plan">盘点计划</string>
    <string name="empty_text">列表为空</string>
    <string name="print_complete">打印完成</string>
    <string name="print_success">打印结果:打印成功</string>
    <string name="print_no_paper">打印结果:打印机缺纸</string>
    <string name="print_failed">打印结果:打印机失败</string>
    <string name="print_voltate_low">打印结果:电池电压过低</string>
    <string name="print_voltate_high">打印结果:电源电压过高</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="tips">提示</string>
    <string name="close">关闭</string>
    <string name="print">打印</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="idle">闲置</string>
    <string name="assets_name">资产名称</string>
    <string name="user">用户</string>
    <string name="department">部门</string>
    <string name="model">型号</string>
    <string name="place">地点</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings111">Settings</string>
    <string name="pkCorp">账套</string>
</resources>
